<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mainMenu_search"
        android:icon="@drawable/search_icon"
        android:iconTint="@color/night_black"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/mainMenu_sortBy"
        android:icon="@drawable/sort_icon"
        android:iconTint="@color/night_black"
        android:title="@string/sort_by"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_sort_by_name"
                android:title="@string/sort_by_name" />
            <item
                android:id="@+id/menu_sort_by_date"
                android:title="@string/sort_by_date" />
            <item
                android:id="@+id/menu_sort_by_size"
                android:title="@string/sort_by_size" />
            <item
                android:id="@+id/menu_sort_by_duration"
                android:title="@string/sort_by_duration" />
        </menu>
    </item>

</menu>