<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menuItem_play"
        android:title="@string/play"
        app:showAsAction="ifRoom"
        android:icon="@drawable/play"
        android:iconTint="@color/night_black"/>

    <item android:id="@+id/menuItem_share"
        android:title="@string/share"
        app:showAsAction="ifRoom"
        android:icon="@drawable/share_icon"
        android:iconTint="@color/night_black"/>

    <item android:id="@+id/menuItem_rename"
        android:title="@string/rename"
        app:showAsAction="ifRoom"
        android:icon="@drawable/rename_icon" />

    <item android:id="@+id/menuItem_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom"
        android:icon="@drawable/delete_forever_icon" />

    <item android:id="@+id/menuItem_details"
        android:title="@string/properties"
        app:showAsAction="ifRoom"
        android:icon="@drawable/info_icon"
        android:iconTint="@color/night_black"/>
</menu>