<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".extras.AppSettings">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_2"
        android:text="@string/choose_theme"
        android:textSize="@dimen/sp_16"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/dp_10"
        android:textStyle="normal|bold" />

    <RadioGroup
        android:id="@+id/radioGroup_theme"
        android:padding="@dimen/dp_3"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioButton_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/light_theme"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/dark_theme"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/default_theme"
            android:checked="true"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold" />

    </RadioGroup>

</LinearLayout>