<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_player_controller"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent">

                    <ImageView
                        android:id="@+id/exo_subtitle"
                        android:layout_width="@dimen/dp_28"
                        android:layout_height="@dimen/dp_28"
                        android:contentDescription="@string/image_description"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/exo_previous"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.5"
                        app:srcCompat="@drawable/subtitles_icon" />

                    <ImageView
                        android:id="@+id/exo_previous"
                        android:layout_width="@dimen/dp_28"
                        android:layout_height="@dimen/dp_28"
                        android:contentDescription="@string/image_description"
                        android:padding="@dimen/dp_2"
                        android:src="@drawable/previous"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/exo_backward"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/exo_subtitle"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.5" />

                    <ImageView
                        android:id="@+id/exo_backward"
                        android:layout_width="@dimen/dp_28"
                        android:layout_height="@dimen/dp_28"
                        android:contentDescription="@string/image_description"
                        android:padding="@dimen/dp_2"
                        android:src="@drawable/backward_10sec"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/exo_play_pause"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/exo_previous"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.5" />

                    <ImageView
                        android:id="@+id/exo_play_pause"
                        android:layout_width="@dimen/dp_30"
                        android:layout_height="@dimen/dp_30"
                        android:contentDescription="@string/image_description"
                        android:padding="@dimen/dp_2"
                        android:src="@drawable/pause"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/exo_forward"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/exo_backward"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.5" />

                    <ImageView
                        android:id="@+id/exo_forward"
                        android:layout_width="@dimen/dp_28"
                        android:layout_height="@dimen/dp_28"
                        android:contentDescription="@string/image_description"
                        android:padding="@dimen/dp_2"
                        android:src="@drawable/forward_10_sec"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/exo_next"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/exo_play_pause"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.5" />

                    <ImageView
                        android:id="@+id/exo_next"
                        android:layout_width="@dimen/dp_28"
                        android:layout_height="@dimen/dp_28"
                        android:contentDescription="@string/image_description"
                        android:padding="@dimen/dp_2"
                        android:src="@drawable/next"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/exo_settings"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/exo_forward"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.5" />

                    <ImageView
                        android:id="@+id/exo_settings"
                        android:layout_width="@dimen/dp_28"
                        android:layout_height="@dimen/dp_28"
                        android:contentDescription="@string/image_description"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/exo_next"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.5"
                        app:srcCompat="@drawable/settings"
                        app:tint="@color/white" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_5"
                    android:layout_marginEnd="@dimen/dp_5"
                    app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:id="@+id/exo_position"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_10"
                        android:padding="@dimen/dp_1"
                        android:text="@string/_00_00"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_10"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/exo_progress_placeholder"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.5" />

                    <androidx.media3.ui.DefaultTimeBar
                        android:id="@+id/exo_progress_placeholder"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:bar_gravity="center"
                        app:bar_height="@dimen/dp_5"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/exo_duration"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/exo_position"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/exo_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/dp_10"
                        android:padding="@dimen/dp_1"
                        android:text="@string/_00_00"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_10"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/exo_progress_placeholder"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.4" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/exo_main_text_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/exo_main_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_1"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:text="@string/textview"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_11"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/setting_list_Menu_container"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/setting_list_Menu_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/exo_main_text"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/setting_list_Menu"
                        android:layout_width="@dimen/dp_10"
                        android:layout_height="@dimen/dp_30"
                        android:layout_marginStart="@dimen/dp_15"
                        android:layout_marginEnd="@dimen/dp_10"
                        android:contentDescription="@string/image_description"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/menu_icon"
                        app:tint="@color/white" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_4"
                android:background="@drawable/controller_background"
                android:orientation="horizontal"
                android:padding="@dimen/dp_3"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/exo_main_text_container"
                app:layout_constraintVertical_bias="0.01999998">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_10"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/screen_rotation"
                        android:layout_width="@dimen/dp_25"
                        android:layout_height="@dimen/dp_25"
                        android:contentDescription="@string/image_description"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/screen_rotation_icon"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="@dimen/dp_25"
                        android:layout_height="wrap_content"
                        android:text="@string/rotate_screen"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_7" />


                </LinearLayout>


                <HorizontalScrollView
                    android:id="@+id/extra_controls_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/dp_10"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/exo_shuffle"
                                android:layout_width="@dimen/dp_25"
                                android:layout_height="@dimen/dp_25"
                                android:contentDescription="@string/image_description"
                                android:scaleType="fitXY"
                                android:src="@drawable/shuffle_icon"
                                app:tint="@color/white" />

                            <TextView
                                android:layout_width="@dimen/dp_25"
                                android:layout_height="wrap_content"
                                android:text="@string/shuffle"
                                android:textColor="@color/white"
                                android:textSize="@dimen/sp_7" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/dp_10"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/exo_repeat_toggle"
                                android:layout_width="@dimen/dp_25"
                                android:layout_height="@dimen/dp_25"
                                android:contentDescription="@string/image_description"
                                android:scaleType="fitXY"
                                android:src="@drawable/repeat_one"
                                app:tint="@color/white" />

                            <TextView
                                android:layout_width="@dimen/dp_25"
                                android:layout_height="wrap_content"
                                android:text="@string/repeat"
                                android:textColor="@color/white"
                                android:textSize="@dimen/sp_7" />
                        </LinearLayout>


                    </LinearLayout>


                </HorizontalScrollView>


                <ImageView
                    android:id="@+id/extra_controls"
                    android:layout_width="@dimen/dp_25"
                    android:layout_height="@dimen/dp_25"
                    android:contentDescription="@string/image_description"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/arrow_forward_menu_open"
                    app:tint="@color/white" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

